# rust-analyzer

./: Cargo.toml
crates/hir-def/: Cargo.toml
crates/hir-def/src/: body.rs  builtin_type.rs  lib.rs
crates/hir-ty/: Cargo.toml
crates/hir-ty/bindings/serialize-tree/bindings/: GoalInfo.ts  NodeGoal.ts  NodeLeaf.ts  SerializeTree.ts
crates/hir-ty/src/: autoderef.rs  builder.rs  chalk_db.rs  chalk_ext.rs  consteval.rs  db.rs  diagnostics.rs  display.rs  export_bindings.rs  infer.rs  inhabitedness.rs  interner.rs  lang_items.rs  layout.rs  lib.rs  lower.rs  mapping.rs  method_resolution.rs  mir.rs  test_db.rs  tests.rs  tls.rs  traits.rs  utils.rs
crates/hir-ty/src/consteval/: tests.rs
crates/hir-ty/src/diagnostics/: decl_check.rs  expr.rs  match_check.rs  unsafe_check.rs
crates/hir-ty/src/diagnostics/decl_check/: case_conv.rs
crates/hir-ty/src/diagnostics/match_check/: deconstruct_pat.rs  pat_util.rs  usefulness.rs
crates/hir-ty/src/infer/: closure.rs  coerce.rs  expr.rs  mutability.rs  pat.rs  path.rs  unify.rs
crates/hir-ty/src/layout/: adt.rs  tests.rs
crates/hir-ty/src/mir/: borrowck.rs  eval.rs  lower.rs  monomorphization.rs  pretty.rs
crates/hir-ty/src/mir/eval/: shim.rs  tests.rs
crates/hir-ty/src/mir/lower/: as_place.rs  pattern_matching.rs
crates/hir-ty/src/proof_tree/: mod.rs  resolve.rs  serialize_tree.rs  types.rs  utils.rs  writer.rs
crates/hir-ty/src/tests/: regression.rs
crates/rust-analyzer/src/: caps.rs
