[package]
name = "hir-ty"
version = "0.0.0"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
cov-mark = "2.0.0-pre.1"
itertools = "0.10.5"
arrayvec = "0.7.2"
bitflags = "2.1.0"
smallvec.workspace = true
ena = "0.14.0"
either = "1.7.0"
oorandom = "11.1.3"
tracing = "0.1.35"
rustc-hash = "1.1.0"
scoped-tls = "1.0.0"

fluid-let = "1.0.0"
index_vec = { version = "0.1.3", features = ["serde"] }
# = { version = "=1.0.156", features = ["derive"], optional = true }
serde.workspace = true
ts-rs = { version = "6.2.0", features = [
    "triomphe-impl",
    "smallvec-impl",
    "rustc-hash-impl",
    "index-vec-impl"
] }
lazy_static = "1.4.0"

argus.workspace = true
chalk-solve.workspace = true
chalk-ir.workspace = true
chalk-recursive.workspace = true
chalk-derive.workspace = true

la-arena.workspace = true
once_cell = "1.17.0"
triomphe.workspace = true
nohash-hasher.workspace = true
typed-arena = "2.0.1"
rustc_index = { version = "0.0.20221221", package = "hkalbasi-rustc-ap-rustc_index", default-features = false }

# local deps
stdx.workspace = true
intern.workspace = true
hir-def.workspace = true
hir-expand.workspace = true
base-db.workspace = true
profile.workspace = true
syntax.workspace = true
limit.workspace = true

[features]
tserialize = []

[dev-dependencies]
expect-test = "1.4.0"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
    "registry",
] }
tracing-tree = "0.2.1"
project-model.workspace = true

# local deps
test-utils.workspace = true
